date box alignment for phones fixed

--- a/src/App.css
+++ b/src/App.css
@@ -459,6 +459,18 @@ input[type="checkbox"] {
     margin-right: 10px;
   }
 
+  .data-check-row {
+    margin-left: 1.85rem;
+  }
+
+  .dal-row {
+    margin-left: -1rem;
+  }
+  
+  .al-row {
+    margin-left: -1rem;
+  }
+
   .control-container {
     width: 92%;
   }
